--- a/P5_01_code/app/build.gradle
+++ b/P5_01_code/app/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.cleanup.todoc"
@@ -10,14 +14,13 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    //ajout de ces lignes
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-    lintOptions {
-        disable 'RestrictedApi'
     }
 }
 
@@ -30,4 +33,15 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.android.support:design:28.0.0'
+
+    //ROOM
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+    //VIEW MODEL & LIVE DATA
+    implementation 'android.arch.lifecycle:extensions:1.1.0'
+
+    // TESTING
+    androidTestImplementation "android.arch.core:core-testing:1.1.0"
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.2'
+    testImplementation 'org.mockito:mockito-all:2.0.2-beta'
 }
